--- a/src/main/resources/templates/locate/add.html
+++ b/src/main/resources/templates/locate/add.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>查看</title>
+    <title th:text="${locateModel.title}">查看</title>
 
     <!--公共css-->
     <div th:include="common_css :: common_css"></div>
@@ -55,7 +55,7 @@
                             <label for="top22">
                                 一级工作区：
                             </label>
-                            <input type="text" class="form-group form-control" id="top22" placeholder="一级工作区">
+                            <input type="text" class="form-group form-control" id="top22" placeholder="添加一级工作区">
                             <a href="#" onclick="saveLocate()">添加</a>
 
                         </div>
@@ -84,25 +84,6 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
     <!--公共js-->
     <div th:include="common_js :: common_js"></div>
 </div>
