--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -39,6 +39,9 @@
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents1">
                     <li>
+                        <a href="./facility/list.html" th:href="@{~/facility/list}">设备管理</a>
+                    </li>
+                    <li>
                         <a href="./locate/edit.html" th:href="@{~/locate/edit}">工作区列表</a>
                     </li>
                     <li>
