--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -51,7 +51,13 @@
                                 <td>女</td>
                             </div>
                             <td th:text="${userModel.user.permission}"></td>
-                            <td th:text="${userModel.user.status}"></td>
+
+                            <div th:switch="${userModel.user.status}">
+                                <td th:case="1" style="color: green">正常</td>
+                                <td th:case="2" style="color: red;">异常</td>
+                            </div>
+
+
                             <td th:text="${userModel.user.identity}"></td>
                             <td th:text="${userModel.user.department}"></td>
                             <td th:text="${userModel.user.time}"></td>
@@ -62,7 +68,6 @@
                     </table>
                 </div>
             </div>
-            <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
         </div>
     </div>
     <!-- /.container-fluid-->
@@ -77,24 +82,6 @@
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fa fa-angle-up"></i>
     </a>
-    <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
     <!--公共js-->
     <div th:include="common_js :: common_js"></div>
 </div>
