个人流水信息查询

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -93,7 +93,7 @@
                         <a href="#">门禁流水统计</a>
                     </li>
                     <li>
-                        <a href="#">个人流水查询</a>
+                        <a href="./record/individual.html" th:href="@{~/record/individualSearch}">个人流水查询</a>
                     </li>
                 </ul>
             </li>
