--- a/src/main/resources/templates/record/individual.html
+++ b/src/main/resources/templates/record/individual.html
@@ -17,18 +17,21 @@
         var time1 = $("#time1").val();
         var time2 = $("#time2").val();
 
-        if ( time1 == "" || time2 == "" || cardid == "") {
+        if (time1 == "" || time2 == "" || cardid == "") {
             alert("请检查参数！重新查询！");
             return;
-        }else {
+        } else {
             var params = $("#form2").serialize();
             $.ajax({
-                url:"/record/findIndividual/"+params,
-                type:'get',
-                success:function(data){
+                url: "/record/findIndividual/" + params,
+                type: 'get',
+                success: function (data) {
+
+                    document.getElementById("dataTable111").style.visibility = "visible";
+
                     var recordList = data['recordList'];
                     var tbody = document.getElementById("tbody1");
-                    for(index in recordList){
+                    for (index in recordList) {
                         var obj = (recordList[index]);
                         console.log(obj);
                         var tr = document.createElement("tr");
@@ -59,7 +62,7 @@
                         var tdType = document.createElement("td");
                         if (obj['type'] == "1") {
                             tdType.textContent = "进";
-                        }else if (obj['type'] == "2") {
+                        } else if (obj['type'] == "2") {
                             tdType.textContent = "出";
                         }
 
@@ -77,7 +80,6 @@
                         tr.appendChild(tdLocation);
                         tbody.appendChild(tr);
                     }
-
 
 
                 },
@@ -101,8 +103,6 @@
             </li>
             <li class="breadcrumb-item active" th:text="${recordModel.subtitle}">信息查询</li>
         </ol>
-
-
         <div class="container">
             <div class="row clearfix">
                 <div class="col-md-6 column">
@@ -115,53 +115,48 @@
                             </div>
                         </div>
                         <div class="form-group" style="width: auto">
-                            <label for="time1" class="col-md-3 form-group">从时间</label>
+                            <label for="time1" class="col-md-3 form-group">起始时间</label>
                             <input style="width: auto" type="date" col-md-3 name="time1" class="form-group col-md-8"
                                    id="time1"/>
                         </div>
 
                         <div class="form-group" style="width: auto">
-                            <label for="time2" class="col-md-3 form-group">到时间</label>
+                            <label for="time2" class="col-md-3 form-group">截止时间</label>
                             <input style="width: auto" type="date" name="time2" class="form-group col-md-8" id="time2"/>
                         </div>
                     </form>
                     <div class="col-md column text-xl-center">
-                        <button type="button" onclick="search()" class="btn btn-default btn-warning form-group">查询</button>
+                        <button type="button" onclick="search()" class="btn btn-default btn-warning form-group">查询
+                        </button>
                     </div>
                 </div>
-
-
             </div>
         </div>
-
-
-        <div class="card mb-3">
-                <div class="card-body">
-                    <div  class="table-responsive">
-                        <table class="table table-bordered text-center" id="dataTable111" width="100%" cellspacing="0">
-                            <thead>
-                            <tr>
-                                <th>设备</th>
-                                <th>卡号</th>
-                                <th>姓名</th>
-                                <th>性别</th>
-                                <th>身份</th>
-                                <th>部门/学院</th>
-                                <th>刷卡时间</th>
-                                <th>类型</th>
-                                <th>工作区</th>
-                            </tr>
-                            <tbody id="tbody1">
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+        <div class="table-responsive">
+            <table style="visibility:hidden" class="table table-bordered text-center" id="dataTable111" width="100%"
+                   cellspacing="0">
+                <thead>
+                <tr>
+                    <th>设备</th>
+                    <th>卡号</th>
+                    <th>姓名</th>
+                    <th>性别</th>
+                    <th>身份</th>
+                    <th>部门/学院</th>
+                    <th>刷卡时间</th>
+                    <th>类型</th>
+                    <th>工作区</th>
+                </tr>
+                <tbody id="tbody1">
+                </tbody>
+            </table>
         </div>
-        <a class="scroll-to-top rounded" href="#page-top">
-            <i class="fa fa-angle-up"></i>
-        </a>
-        <div th:include="common_js :: common_js"></div>
     </div>
+    <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fa fa-angle-up"></i>
+    </a>
+    <div th:include="common_js :: common_js"></div>
+<!--</div>-->
 </div>
 
 </body>
