--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -90,7 +90,7 @@
                         <a href="./record/search.html" th:href="@{~/record/search}">流水信息查询</a>
                     </li>
                     <li>
-                        <a href="#">门禁流水统计</a>
+                        <a href="./record/facility.html" th:href="@{~/record/facilitySearch}">门禁流水统计</a>
                     </li>
                     <li>
                         <a href="./record/individual.html" th:href="@{~/record/individualSearch}">个人流水查询</a>
