--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -21,55 +21,51 @@
             </li>
             <li class="breadcrumb-item active">信息查询</li>
         </ol>
-        <!-- Example DataTables Card-->
-        <div class="card mb-3">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <form action="/users" th:action="@{/users}" method="POST" th:object="${userModel.user}" role="form">
-                        <div class="form-group">
-                            <label for="cardid">
-                                账号：
-                            </label>
-                            <input  readonly="readonly" type="text" id="cardid" name="cardid" th:value="*{cardid}" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="name">
-                                姓名：
-                            </label>
-                            <input type="text" id="name" name="name" th:value="*{name}" class="form-control">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="password">
-                                密码
-                            </label>
-                            <input type="password" id="password" name="password" th:value="*{password}" class="form-control">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="department">
-                                部门/学院
-                            </label>
-                            <input type="text" id="department" name="department" th:value="*{department}" class="form-control">
-
-                        </div>
-                        <div class="form-group">
-                            <label for="sex">
-                                性别：
-                            </label>
-                                <!--<input type="text" id="sex" name="sex" value="1" class="form-control">-->
-                                <select id="sex" name="sex">
-                                    <option name="sex"  value="1" th:selected="*{sex} eq 1">男</option>
-                                    <option name="sex" value="2" th:selected="*{sex} eq 2">女</option>
-                                </select>
-                        </div>
-                        <div class="form-group">
-                            <input type="submit" value="提交" class="btn btn-primary">
-
-                        </div>
-                    </form>
+        <div class="table-responsive">
+            <form action="/users" th:action="@{/users}" method="POST" th:object="${userModel.user}" role="form">
+                <div class="form-group">
+                    <label for="cardid">
+                        账号：
+                    </label>
+                    <input readonly="readonly" type="text" id="cardid" name="cardid" th:value="*{cardid}"
+                           class="form-control">
                 </div>
-            </div>
+                <div class="form-group">
+                    <label for="name">
+                        姓名：
+                    </label>
+                    <input type="text" id="name" name="name" th:value="*{name}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <label for="password">
+                        密码
+                    </label>
+                    <input type="password" id="password" name="password" th:value="*{password}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <label for="department">
+                        部门/学院
+                    </label>
+                    <input type="text" id="department" name="department" th:value="*{department}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <label for="sex">
+                        性别：
+                    </label>
+                    <!--<input type="text" id="sex" name="sex" value="1" class="form-control">-->
+                    <select id="sex" name="sex">
+                        <option name="sex" value="1" th:selected="*{sex} eq 1">男</option>
+                        <option name="sex" value="2" th:selected="*{sex} eq 2">女</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="提交" class="btn btn-primary">
+
+                </div>
+            </form>
         </div>
     </div>
     <footer class="sticky-footer">
