--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -4,7 +4,7 @@
 
 <head>
     meta charset="UTF-8"/>
-    <title>Thymeleaf in action</title>
+    <title th:href="${userModel.title}">Thymeleaf in action</title>
     <!--公共css-->
     <div th:include="common_css :: common_css"></div>
 </head>
@@ -16,15 +16,10 @@
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">流水管理</a>
+                <a href="#" th:href="${userModel.title}">流水管理</a>
             </li>
-            <li class="breadcrumb-item active">信息查询</li>
+            <li class="breadcrumb-item active" th:href="${userModel.subtitle}">信息查询</li>
         </ol>
-        <!-- Example DataTables Card-->
-        <div class="card mb-3">
-            <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example</div>
-            <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered text-center"  id="dataTable1" width="100%" cellspacing="0">
                         <thead>
@@ -59,7 +54,7 @@
 
 
                             <td th:text="${userModel.user.identity}"></td>
-                            <td th:text="${userModel.user.department}"></td>
+                            <td th:text="${userModel.department}"></td>
                             <td th:text="${userModel.user.time}"></td>
                             <td><a th:href="@{'/users/delete/'+${userModel.user.cardid}}">删除</a>
                                 <a th:href="@{'/users/modify/'+${userModel.user.cardid}}">修改</a>
@@ -67,11 +62,7 @@
                         </tr>
                     </table>
                 </div>
-            </div>
-        </div>
     </div>
-    <!-- /.container-fluid-->
-    <!-- /.content-wrapper-->
     <footer class="sticky-footer">
         <div class="container">
             <div class="text-center">
