--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Thymeleaf in action</title>
+    <title th:text="${userModel.title}">Thymeleaf in action</title>
     <!--公共css-->
     <div th:include="common_css :: common_css"></div>
 </head>
@@ -18,22 +18,27 @@
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">人员管理</a>
+                <a href="#" th:text="${userModel.title}">人员管理</a>
             </li>
-            <li class="breadcrumb-item active">信息查询</li>
+            <li class="breadcrumb-item active" th:text="${userModel.subtitle}">信息查询</li>
         </ol>
         <div class="table-responsive">
             <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
                 <thead>
-                <tr>
-                    <td>账号</td>
-                    <td>姓名</td>
-                    <td>性别</td>
-                    <td>操作</td>
+                <tr class="text-center">
+                    <th>卡号</th>
+                    <th>姓名</th>
+                    <th>性别</th>
+                    <th>权限</th>
+                    <th>状态</th>
+                    <th>身份</th>
+                    <th>学院</th>
+                    <th>创建/修改时间</th>
+                    <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="user : ${userModel.userList}">
+                <tr th:each="user: ${userModel.userList}" class="success">
                     <td th:text="${user.cardid}"></td>
                     <td th:text="${user.name}"></td>
                     <div th:if="${user.sex} eq 1">
@@ -42,9 +47,21 @@
                     <div th:if="${user.sex} eq 2">
                         <td>女</td>
                     </div>
-                    <td><a th:href="@{'~/users/'+${user.cardid}}" th:text="查看"></a></td>
-                </tr>
+                    <td th:text="${user.permission}"></td>
 
+                    <div th:switch="${user.status}">
+                        <td th:case="1" style="color: green">正常</td>
+                        <td th:case="2" style="color: red;">异常</td>
+                    </div>
+
+
+                    <td th:text="${user.roleName}"></td>
+                    <td th:text="${user.departmentName}"></td>
+                    <td th:text="${#dates.format(user.time,'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td><a th:href="@{'/users/delete/'+${user.cardid}}">删除</a>
+                        <a th:href="@{'/users/modify/'+${user.cardid}}">修改</a>
+                    </td>
+                </tr>
                 </tbody>
             </table>
         </div>
